--- a/style.css
+++ b/style.css
@@ -30,3 +30,32 @@
 .banner-value{
     padding: 125px 550px 300px 125px;  
 }
+h1{
+    font-size: 28px;
+}
+.address{
+    margin: 50px 140px;
+    /* background-size: 1060px; */
+}
+
+.description{
+    padding: 100px 360px 200px 360px;
+    background-color:rgb(248, 222, 222);
+
+}
+
+.phtoly{
+    border: 7px solid red;
+    border-radius: 150%;
+    width: 200px;
+    height: 200px;
+    padding: 7px;
+
+}
+.comming-soon{
+    display: flex;
+    margin: 80px 140px;
+    align-items: center;
+    
+    gap: 100px;
+}
