--- a/style.css
+++ b/style.css
@@ -93,3 +93,57 @@ h1{
 .red-line{
     margin-bottom: -5%;
 }
+
+.bag-header{
+    display: flex;
+   margin: 0px 140px;
+   gap: 15px;
+}
+.bag-price img{
+    width: 320px;
+}
+
+
+.search{
+    margin: 40px 140px;
+    background-color: bisque;
+}
+.middle{
+    padding: 30px 300px 30px 300px;
+    text-align: center;
+
+}
+.searching{
+    padding: 6px 10px;
+    
+}
+.searching-two{
+    background-color:orangered ;
+    padding: 6px 10px;
+    border: 0;
+    border-radius: 5%;
+}
+.inputing{
+    display: flex;
+
+}
+
+
+
+footer{
+    background-color: black;
+    margin: 50px 140px
+   
+
+}
+.main-footer{
+    display: flex;
+     padding: 50px 0;
+    justify-content: space-around;
+    color: white;
+}
+.icone{
+    text-align: center;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
